manifests/resources/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: 
  name: demo-app-gateway
  namespace: demo-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "demo-app.hana.com"
