manifests/resources/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-app
  namespace: demo-app
spec:
  hosts:
  - "demo-app.hana.dev"
  gateways:
  - demo-app-gateway
  http:
  - route:
    - destination:
        host: demo-app.hana.com
        port:
          number: 8080
